--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
             liffId: "2005695258-0rnXZ37r"
         }).then(() => {
             console.log("LIFF 初始化成功");
+            // 檢查用戶是否授權
+            if (!liff.isLoggedIn()) {
+                liff.login();
+            }
         }).catch((err) => {
             console.error('LIFF 初始化失敗:', err);
         });
