--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `您的測驗結果總分為: ${totalScore}`
+                text: `我的測驗結果總分為: ${totalScore}`
             }]).then(() => {
                 console.log("消息發送成功");
                 liff.closeWindow();
