--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
             <div class="question-container">
                 <label>1. 吞嚥問題讓我體重減輕。</label>
             </div>
-            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 6, 'eat10')">沒有問題</button>
-            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 6, 'eat10')">問題輕微</button>
-            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 6, 'eat10')">問題中等</button>
-            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 6, 'eat10')">問題嚴重</button>
-            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 6, 'eat10')">非常嚴重</button>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 1, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 1, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 1, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 1, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 1, 'eat10')">非常嚴重</button>
 
             <div class="button-row">
                 <button type="button" class="btn" onclick="showPreviousPage('selection-page')">上一題</button>
@@ -190,11 +190,11 @@
             <div class="question-container">
                 <label>2. 吞嚥問題讓我不能像以前一樣外出用餐。</label>
             </div>
-            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 7, 'eat10')">沒有問題</button>
-            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 7, 'eat10')">問題輕微</button>
-            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 7, 'eat10')">問題中等</button>
-            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 7, 'eat10')">問題嚴重</button>
-            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 7, 'eat10')">非常嚴重</button>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 2, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 2, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 2, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 2, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 2, 'eat10')">非常嚴重</button>
 
             <div class="button-row">
                 <button type="button" class="btn" onclick="showPreviousPage('eat10-page-1')">上一題</button>
@@ -205,11 +205,11 @@
             <div class="question-container">
                 <label>3. 喝飲料時要花很多力氣。</label>
             </div>
-            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 8, 'eat10')">沒有問題</button>
-            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 8, 'eat10')">問題輕微</button>
-            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 8, 'eat10')">問題中等</button>
-            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 8, 'eat10')">問題嚴重</button>
-            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 8, 'eat10')">非常嚴重</button>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 3, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 3, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 3, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 3, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 3, 'eat10')">非常嚴重</button>
 
             <div class="button-row">
                 <button type="button" class="btn" onclick="showPreviousPage('eat10-page-2')">上一題</button>
@@ -220,11 +220,11 @@
             <div class="question-container">
                 <label>4. 吃固體食物時要花很多力氣。</label>
             </div>
-            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 9, 'eat10')">沒有問題</button>
-            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 9, 'eat10')">問題輕微</button>
-            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 9, 'eat10')">問題中等</button>
-            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 9, 'eat10')">問題嚴重</button>
-            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 9, 'eat10')">非常嚴重</button>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 4, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 4, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 4, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 4, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 4, 'eat10')">非常嚴重</button>
 
             <div class="button-row">
                 <button type="button" class="btn" onclick="showPreviousPage('eat10-page-3')">上一題</button>
@@ -235,6 +235,81 @@
             <div class="question-container">
                 <label>5. 吞藥丸時要花很多力氣。</label>
             </div>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 5, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 5, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 5, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 5, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 5, 'eat10')">非常嚴重</button>
+
+            <div class="button-row">
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-4')">上一題</button>
+            </div>
+        </div>
+
+        <div class="question-page" id="eat10-page-6">
+            <div class="question-container">
+                <label>6. 吞嚥的過程會引起疼痛。</label>
+            </div>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 6, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 6, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 6, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 6, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 6, 'eat10')">非常嚴重</button>
+
+            <div class="button-row">
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-5')">上一題</button>
+            </div>
+        </div>
+
+        <div class="question-page" id="eat10-page-7">
+            <div class="question-container">
+                <label>7. 吞嚥問題讓我無法享受用餐。</label>
+            </div>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 7, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 7, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 7, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 7, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 7, 'eat10')">非常嚴重</button>
+
+            <div class="button-row">
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-6')">上一題</button>
+            </div>
+        </div>
+
+        <div class="question-page" id="eat10-page-8">
+            <div class="question-container">
+                <label>8. 進食後會感到有東西黏在喉嚨上。</label>
+            </div>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 8, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 8, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 8, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 8, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 8, 'eat10')">非常嚴重</button>
+
+            <div class="button-row">
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-7')">上一題</button>
+            </div>
+        </div>
+
+        <div class="question-page" id="eat10-page-9">
+            <div class="question-container">
+                <label>9. 進食的時候會咳嗽。</label>
+            </div>
+            <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 9, 'eat10')">沒有問題</button>
+            <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 9, 'eat10')">問題輕微</button>
+            <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 9, 'eat10')">問題中等</button>
+            <button type="button" class="option-btn" data-value="3" onclick="selectOption(3, this, 9, 'eat10')">問題嚴重</button>
+            <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 9, 'eat10')">非常嚴重</button>
+
+            <div class="button-row">
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-8')">上一題</button>
+            </div>
+        </div>
+
+        <div class="question-page" id="eat10-page-10">
+            <div class="question-container">
+                <label>10. 吞嚥的過程讓我感到有壓力。</label>
+            </div>
             <button type="button" class="option-btn" data-value="0" onclick="selectOption(0, this, 10, 'eat10')">沒有問題</button>
             <button type="button" class="option-btn" data-value="1" onclick="selectOption(1, this, 10, 'eat10')">問題輕微</button>
             <button type="button" class="option-btn" data-value="2" onclick="selectOption(2, this, 10, 'eat10')">問題中等</button>
@@ -242,7 +317,7 @@
             <button type="button" class="option-btn" data-value="4" onclick="selectOption(4, this, 10, 'eat10')">非常嚴重</button>
 
             <div class="button-row">
-                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-4')">上一題</button>
+                <button type="button" class="btn" onclick="showPreviousPage('eat10-page-9')">上一題</button>
             </div>
         </div>
 
@@ -277,7 +352,7 @@
                     showNextPage(pageNumber, testType);
                 }
             } else if (testType === 'eat10') {
-                eat10Answers[pageNumber - 6] = value;
+                eat10Answers[pageNumber - 1] = value;  // 修正索引，從 1 開始
                 if (pageNumber === 10) {
                     submitEat10Quiz(); // 提交口腔肌少症測驗
                 } else {
@@ -299,8 +374,8 @@
                 document.getElementById(`sarcopenia-page-${pageNumber}`).classList.remove('active');
                 document.getElementById(`sarcopenia-page-${pageNumber + 1}`).classList.add('active');
             } else if (testType === 'eat10') {
-                document.getElementById(`eat10-page-${pageNumber - 5}`).classList.remove('active');
-                document.getElementById(`eat10-page-${pageNumber - 4}`).classList.add('active');
+                document.getElementById(`eat10-page-${pageNumber}`).classList.remove('active');
+                document.getElementById(`eat10-page-${pageNumber + 1}`).classList.add('active');
             }
             currentQuestion++;
         }
